--- a/acmsmall-refs.bib
+++ b/acmsmall-refs.bib
@@ -234,12 +234,11 @@
 	Date-Modified = {2016-03-24 03:16:20 +0000},
 	Eprint = {http://arxiv.org/abs/1512.07919v1},
 	Eprintclass = {cs.DL},
-	Eprinttype = {arxiv},
+	Eprinttype = {arXiv},
 	Month = dec,
 	Title = {Improving Software Citation and Credit},
 	Year = {2015},
-	Bdsk-Url-1 = {http://arxiv.org/abs/1512.07919v1},
-	note={Available at: \url{http://arxiv.org/abs/1512.07919v1}},
+	note={{\tt \href{http://arxiv.org/abs/1512.07919}{arXiv:1512.07919} [cs.DL]}},
 }
 
 @article{Chawla:2016te,
@@ -309,11 +308,14 @@
 	Address = {Edinburgh, United Kingdom},
 	Author = {Sufi, Shoaib and Chue Hong, Neil P and Hettrick, Simon and Antonioletti, Mario and Crouch, Stephen and Hay, Alexander and Inupakutika, Devasena and Jackson, Mike and Pawlik, Aleksandra and Peru, Giacomo and Robinson, John and Les Carr and De Roure, David and Goble, Carole and Parsons, Mark},
 	Booktitle = {Proceedings of the 1st ACM SIGPLAN Workshop on Reproducible Research Methodologies and New Publication Models in Computer Engineering},
+    location = {Edinburgh, United Kingdom},
 	Date-Added = {2016-03-24 03:16:20 +0000},
 	Date-Modified = {2016-03-24 03:16:20 +0000},
 	Month = jun,
 	Pages = {2:1--2:4},
 	Series = {TRUST '14},
+    publisher = {ACM},
+    acmid = {2618140},
 	Title = {Software in Reproducible Research: Advice and Best Practice collected from experiences at the Collaborations Workshop},
 	Year = {2014},
 	Doi = {10.1145/2618137.2618140}}
