--- a/acmsmall-refs.bib
+++ b/acmsmall-refs.bib
@@ -258,7 +258,8 @@
 	Booktitle = {Proceedings of the 2009 ICSE Workshop on Software Engineering for Computational Science and Engineering},
 	Date-Added = {2016-03-24 03:16:20 +0000},
 	Date-Modified = {2016-03-24 03:25:31 +0000},
-	Organization = {IEEE Computer Society},
+	Publisher = {IEEE},
+    Location = {Vancouver, BC},
 	Pages = {1--8},
 	Series = {SECSE},
 	Title = {How Do Scientists Develop and Use Scientific Software?},
@@ -636,7 +637,7 @@
 	Year = {2014}}
 
 @article{WSSSPE3,
-	Author = {Daniel S. Katz and Kyle E. Niemeyer and Sou-Cheng T. Choi and James Hetherington and Frank L\"{o}ffler and Dan Gunter and Ray Idaszak and Steven R. Brandt and Mark A Miller and Sandra Gesing and Nick D. Jones and Nicholas Weber and Gabrielle Allen and Colin C. Venters and Ethan Davis and Lorraine Hwang and Ilian Todorov and Abani Patra and Miguel de Val{-}Borro},
+	Author = {Daniel S. Katz and Sou-Cheng T. Choi and Kyle E. Niemeyer and James Hetherington and Frank L\"{o}ffler and Dan Gunter and Ray Idaszak and Steven R. Brandt and Mark A. Miller and Sandra Gesing and Nick D. Jones and Nicholas Weber and Gabrielle Allen and Colin C. Venters and Ethan Davis and Lorraine Hwang and Ilian Todorov and Abani Patra and Miguel de Val{-}Borro},
 	Date-Added = {2016-01-11 21:38:20 +0000},
 	Date-Modified = {2016-03-23 01:05:41 +0000},
 	Journal = {Journal of Open Research Software},
@@ -696,7 +697,6 @@
  isbn = {978-1-4503-0556-3},
  location = {Hangzhou, China},
  pages = {513--522},
- numpages = {10},
  doi = {10.1145/1958824.1958904},
  acmid = {1958904},
  publisher = {ACM},
@@ -713,7 +713,6 @@
  isbn = {978-1-4503-1331-5},
  location = {San Antonio, Texas, USA},
  pages = {423--434},
- numpages = {12},
  doi = {10.1145/2441776.2441825},
  acmid = {2441825},
  publisher = {ACM},
