--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -189,8 +189,10 @@ Some of the observations and recommendations made here come from their efforts, 
 Currently, services including Zenodo and fig\textbf{share} allow software developers to deposit, archive, and obtain a DOI for a version of their software; the former has a streamlined process~\citeyear{GitHubZenodo} to register DOIs for GitHub software releases.
 The CodeMeta project~\cite{CodeMeta} is formalizing minimal metadata schemas in JSON and XML to connect existing software repositories, archives, and libraries (e.g., GitHub, fig\textbf{share}, Zenodo).
 
-In recognition of the general desire to improve software citation rates, funders and agencies in both the US (NFS, NIH, private foundations) and the UK (STFC, JISC, Wellcome Trust) have sponsored or hosted a number of workshops specifically aimed at addressing \katznote{addressing or discussing?} issues around software citation~\cite{Sufi:2014en,Ahalt:2015ve,ssisoftwarecredit,aas-software-index,saga,Allen:2015ub}.
-\knnote{Anything we can say to tie these together? What didn't they do?}
+In recognition of the general desire to improve software citation rates, funders and agencies in both the US (NFS, NIH, private foundations) and the UK (STFC, JISC, Wellcome Trust) have sponsored or hosted a number of workshops specifically aimed at discussing issues around software citation~\cite{Sufi:2014en,Ahalt:2015ve,ssisoftwarecredit,aas-software-index,saga,Allen:2015ub}.
+In many cases these workshops have produced strong recommendations for their respective communities on how to best proceed.
+
+In addition, a number of common themes arise in these workshops including 1) Highlighting the critical need for making software more ``citable'' (and therefore actions authors and publishers should take to improve the status quo) 2) Discussion of how to better measure the impact of software (and therefore attract appropriate funding) and 3) How to properly archive software (where, how and how often) and how this affects what to cite and when.
 
 Complementary efforts to provide credit for software development in research also depend on standardized citation practices.
 In an effort to ease the process of citing software, Wilson suggests that software authors include a \texttt{CITATION} file to document exactly how the authors of the software would like to be cited by others~\citeyear{ssi-citation-files}.
@@ -200,7 +202,7 @@ Project CRediT (contributor role taxonomy)~\cite{project_credit} includes a ``so
 The related PaperBadger project~\cite{PaperBadger} offers digital contributor badges associated with each role, connecting publications with people via DOI and ORCID, respectively.
 
 Even with an adopted, standard method for software citation, indexers (e.g., Web of Science, Scopus, Google Scholar) currently lack support for indexing any such citations.
-The astrophysics community represents one possible exception to this, where the independent, community-run service NASA ADS~\cite{nasaads} also carries out indexing of citations. 
+The astrophysics community represents one possible exception to this, where the independent, community-run service NASA ADS~\cite{nasaads} also carries out indexing of citations.
 The ADS already indexes references to software listed in the Astrophysics Source Code Library~\citeyear{ascl}, and made a commitment to expand upon this functionality following an AAS\slash GitHub-sponsored meeting~\cite{aas-software-index}.
 
 Finally, on the topic of peer review of software, there is a distinct lack of standardization around the practices of peer review.
