changed ref name in main file

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -289,7 +289,7 @@ In addition, the authors acknowledge members of the FORCE11 Software Citation Wo
 
 % Bibliography
 \bibliographystyle{ACM-Reference-Format-Journals}
-\bibliography{acmsmall-refs}
+\bibliography{SC-challenge}
                              % Sample .bib file with references that match those in
                              % the 'Specifications Document (V1.5)' as well containing
                              % 'legacy' bibs and bibs with 'alternate codings'.
