small changes, adding 2 comments

--- a/SC-challenge.bib
+++ b/SC-challenge.bib
@@ -763,7 +763,7 @@ author = {Xuelian Pan and Erjia Yan and Qianqian Wang and Weina Hua},
 	Title = {Invitation to comment on a proposal for a cohesive research software citation-enabling platform}}
 
 @misc{saga,
-	Key = {Saga Software Credit},
+	Key = {{SAGA} Software Credit},
 	Howpublished = {\url{https://geodynamics.org/cig/projects/saga/}},
 	Note = {Accessed: 2016-04-06},
     Year = {2015},
