--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -165,11 +165,11 @@ The scientific community uses citation to acknowledge traditional research resul
 One method to increase the amount of software developed, shared, and credited is to treat a software release as a publication.
 There is good evidence that academics respond to incentives, including interview and survey data saying that increased citation would drive increased software development and sharing~\cite{howison-herbsleb2011,huang2013}.
 Furthermore, evidence indicates that research activity increases when outputs can be formally counted~\cite{mcnaught2015}.
-Finally, evidence of success in direct citations to datasets~\cite{belter2014}---as opposed to indirect citations through publications---suggests similar positive benefits of software citation.
+Finally, evidence of success in direct citations to datasets~\cite{belter2014}---as opposed to indirect citations through publications---suggests similar positive benefits for software citation.
 
 In addition to the above benefits, since research results depend on the specific software used (e.g., version), proper citation---and the associated preservation---is necessary to ensure reproducibility~\cite{Sufi:2014en}.
 Provenance of research results and data requires, among other things, a record of the software used to generate or process that data~\cite{Sandve:2013gh,Wilson:2014aa}.
-Potential errors in software or variations due to environment~\cite{Morin:2012hz,Soergel:2015aa} further warrant the citation of specific software used.
+Potential errors in software or variations due to environment~\cite{Morin:2012hz,Soergel:2015aa} further warrant the citation of the specific software used.
 
 Different communities follow widely varying practices for citing software, with guidelines ranging from citations of an associated paper or the software itself via DOI~\cite{AAS:2016} to no policy at all, with many ad hoc practices in between~\cite{Howison2015}.
 Furthermore, some research communities have not yet adopted open-source mentalities regarding research software.
@@ -186,28 +186,34 @@ As a first step towards sustainable, reusable, and attributable software, effort
 
 Multiple organizations, including the WSSSPE Software Credit working group~[\citeNP{WSSSPE1};\citeyearNP{WSSSPE2};\citeyearNP{WSSSPE3}] and FORCE11 Software Citation Working Group~\citeyear{SCWG}, are working to standardize software citation practices.
 Some of the observations and recommendations made here come from their efforts, which follow similar work by DataCite and the~\citeN{DataCitation2014} to standardize research data citation practices.
-Currently, services including Zenodo and fig\textbf{share} allow software developers to deposit, archive, and obtain a DOI for a version of their software; the former has a streamlined process~\citeyear{GitHubZenodo} to register DOIs for GitHub software releases.
+Currently, services including Zenodo and fig\textbf{share} allow software developers to deposit, archive, and obtain a DOI for a version of their software; the former has a streamlined process~\cite{GitHubZenodo} to register DOIs for GitHub software releases.
 The CodeMeta project~\cite{CodeMeta} is formalizing minimal metadata schemas in JSON and XML to connect existing software repositories, archives, and libraries (e.g., GitHub, fig\textbf{share}, Zenodo).
 
-In recognition of the general desire to improve software citation rates, funders and agencies in both the US (NFS, NIH, private foundations) and the UK (STFC, JISC, Wellcome Trust) have sponsored or hosted a number of workshops specifically aimed at discussing issues around software citation~\cite{Sufi:2014en,Ahalt:2015ve,ssisoftwarecredit,aas-software-index,saga,Allen:2015ub}.
+In recognition of the general desire to improve software citation rates, funders and agencies in the US (NFS, NIH, private foundations) and the UK (STFC, JISC, Wellcome Trust) have sponsored or hosted a number of workshops specifically aimed at discussing issues around software citation~\cite{Sufi:2014en,Ahalt:2015ve,ssisoftwarecredit,aas-software-index,saga,Allen:2015ub}.
 In many cases these workshops have produced strong recommendations for their respective communities on how to best proceed.
 
-In addition, a number of common themes arise in these workshops including 1) Highlighting the critical need for making software more ``citable'' (and therefore actions authors and publishers should take to improve the status quo) 2) Discussion of how to better measure the impact of software (and therefore attract appropriate funding) and 3) How to properly archive software (where, how and how often) and how this affects what to cite and when.
+In addition, a number of common themes arose in these workshops, including 1) The critical need for making software more ``citable'' (and therefore actions authors and publishers should take to improve the status quo) 2) How to better measure the impact of software (and therefore attract appropriate funding) and 3) How to properly archive software (where, how and how often) and how this affects what to cite and when.
 
 Complementary efforts to provide credit for software development in research also depend on standardized citation practices.
-In an effort to ease the process of citing software, Wilson suggests that software authors include a \texttt{CITATION} file to document exactly how the authors of the software would like to be cited by others~\citeyear{ssi-citation-files}.
-However, this is not a strictly machine-readable solution.
+In an effort to ease the process of citing software, Wilson suggests that software authors include a \texttt{CITATION} file to document exactly how the authors of the software would like to be cited by others~\citeyear{ssi-citation-files}, 
+though this is not a machine-readable solution.
 Another proposal is transitive credit via JSON-LD~\cite{Katz:2015aa}, which assigns varying credit weights to contriponents---both contributors and research artifacts, including software and data---depending on their level of importance to the work.
 Project CRediT (contributor role taxonomy)~\cite{project_credit} includes a ``software'' category for authors of a publication with roles dedicated to software development, maintenance, and\slash or testing.
-The related PaperBadger project~\cite{PaperBadger} offers digital contributor badges associated with each role, connecting publications with people via DOI and ORCID, respectively.
+The related PaperBadger project~\cite{PaperBadger} creates digital contributor badges associated with each Project CRediT role, connecting publications with people via DOI and ORCID, respectively.
 
-Even with an adopted, standard method for software citation, indexers (e.g., Web of Science, Scopus, Google Scholar) currently lack support for indexing any such citations.
+Even with an adopted, standard method for software citation, indexers (e.g., Web of Science, Scopus, Google Scholar) currently lack support for indexing such citations.
 The astrophysics community represents one possible exception to this, where the independent, community-run service NASA ADS~\cite{nasaads} also carries out indexing of citations.
-The ADS already indexes references to software listed in the Astrophysics Source Code Library~\citeyear{ascl}, and made a commitment to expand upon this functionality following an AAS\slash GitHub-sponsored meeting~\cite{aas-software-index}.
+The ADS already indexes references to software listed in the Astrophysics Source Code Library~\citeyear{ascl}, and has made a commitment to expand upon this functionality following an AAS\slash GitHub-sponsored meeting~\cite{aas-software-index}.
 
 Finally, on the topic of peer review of software, there is a distinct lack of standardization around the practices of peer review.
-Journals accepting ``software'' submissions (e.g., \textit{F1000Research}, \textit{SoftwareX}, \textit{Computer Physics Communications}) often conflate review of the submitted software with a review of research output \textbf{produced by} the software.
+Journals accepting ``software'' submissions (e.g., \textit{F1000Research}, \textit{SoftwareX}, \textit{Computer Physics Communications}) can conflate review of the submitted software with a review of research output \textbf{produced by} the software. \katznote{this really isn't the case for SoftwareX - it has a process for review of software itself (\url{https://www.elsevier.com/__data/assets/pdf_file/0010/97066/ReviewerForm.pdf}), and the papers it accepts are software paper, not research (science) output papers.  Maybe we need some different examples.}
 The rOpenSci community represents one exception to this, with a documented review process~\cite{rOpenSci-reviews} they use to determine whether a package can become part of the rOpenSci collection.
+
+\katznote{potential alt paragraph}
+Finally, on the topic of peer review of software, there is a distinct lack of standardization around the practices of peer review.
+Some journals that accept both ``software'' submissions and general research papers can conflate review of the submitted software with a review of research output \textbf{produced by} the software. Software-only journals (e.g., \textit{Journal of Open Research Software}, \textit{SoftwareX}), and the
+rOpenSci community represent exceptions to this, with documented review processes. For example, rOpenSci has a process \cite{rOpenSci-reviews} used to determine whether a package can become part of the rOpenSci collection.
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Challenges and Research Directions}
@@ -244,8 +250,8 @@ Acceptance will happen over time; unclear how to accelerate this process \\
 \end{tabular}}
 \end{table}
 
-For software to be cited, we recommend that metadata include software name, primary authors\slash contributors (name and ORCID), DOI or other unique identifier, location where the software has been published\slash archived (DOI\slash URL), and software dependencies (via DOI).
-This information should be provided in a \texttt{CITATION} file, potentially in JSON or XML format (and with an appropriate metadata schema, e.g., DOAP) to supplement or replace plaintext and allow automatic processing.
+For software to be cited, we recommend that metadata include software name, primary authors\slash contributors (name and ORCID), DOI or other unique identifier, location where the software has been published\slash archived (DOI\slash URL), and software dependencies (via DOI). \katznote{Do we need the location?  and the dependencies?  Two sentences later we say we don't}
+This information should be provided in a \texttt{CITATION} file, potentially in JSON or XML format (and with an appropriate metadata schema, e.g., DOAP) to allow automatic processing.
 Citations of software in publications should minimally include software name, primary authors, and DOI or location where the software was published\slash archived; however, individual citation formats will vary based on the particular style of journals, conferences, or professional societies.
 Existing services such as Libraries.io~\cite{Libraries.io} and Depsy~\cite{Depsy} automate software dependency tracking; these could be harnessed to produce citation networks.
 Technical solutions to these challenges exist---community acceptance is instead needed.
@@ -275,9 +281,9 @@ In other words, if using different software could produce different data or resu
 \end{quote}
 
 However, research and development efforts are needed to solve the remaining challenges.
-These questions include: how can we cite closed-source\slash commercial software---can the above information be provided, even if the software itself is not publicly preserved?
-Software citations require indexing to create a citation network akin to publications to carry weight for academic credit and reputation, so how will index services (e.g., Web of Science, Scopus, Google Scholar) fully index software?
-How can publications indicate direct use of software for research in citations, where results would not be possible without efforts of software authors---should such a citation be ``weighted'' higher than others?
+These questions include: how can we cite closed-source\slash commercial software -- can the above information be provided, even if the software itself is not publicly preserved?
+Software citations require indexing to create a citation network akin to publications to carry weight for academic credit and reputation, so how can index services (e.g., Web of Science, Scopus, Google Scholar) be encouraged to fully index software?
+How can publications indicate direct use of software for research in citations, where results would not be possible without efforts of software authors -- should such a citation be ``weighted'' higher than others?
 The \citeN{AAS:2016} suggests a new ``Software'' section below the acknowledgements; other approaches include machine-readable supplementary data~\cite{Katz:2015aa}.
 
 Finally, open questions remain on whether citable software should go through peer review and, if so, how can this be implemented?
