replaced en-dashes with superior em-dashes

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -281,9 +281,9 @@ In other words, if using different software could produce different data or resu
 \end{quote}
 
 However, research and development efforts are needed to solve the remaining challenges.
-These questions include: how can we cite closed-source\slash commercial software -- can the above information be provided, even if the software itself is not publicly preserved?
+These questions include: how can we cite closed-source\slash commercial software---can the above information be provided, even if the software itself is not publicly preserved?
 Software citations require indexing to create a citation network akin to publications to carry weight for academic credit and reputation, so how can index services (e.g., Web of Science, Scopus, Google Scholar) be encouraged to fully index software?
-How can publications indicate direct use of software for research in citations, where results would not be possible without efforts of software authors -- should such a citation be ``weighted'' higher than others?
+How can publications indicate direct use of software for research in citations, where results would not be possible without efforts of software authors---should such a citation be ``weighted'' higher than others?
 The \citeN{AAS:2016} suggests a new ``Software'' section below the acknowledgements; other approaches include machine-readable supplementary data~\cite{Katz:2015aa}.
 
 Finally, open questions remain on whether citable software should go through peer review and, if so, how can this be implemented?
