chose alternate paragraph on software review

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -206,14 +206,9 @@ The astrophysics community represents one possible exception to this, where the 
 The ADS already indexes references to software listed in the Astrophysics Source Code Library~\citeyear{ascl}, and has made a commitment to expand upon this functionality following an AAS\slash GitHub-sponsored meeting~\cite{aas-software-index}.
 
 Finally, on the topic of peer review of software, there is a distinct lack of standardization around the practices of peer review.
-Journals accepting ``software'' submissions (e.g., \textit{F1000Research}, \textit{SoftwareX}, \textit{Computer Physics Communications}) can conflate review of the submitted software with a review of research output \textbf{produced by} the software. \katznote{this really isn't the case for SoftwareX - it has a process for review of software itself (\url{https://www.elsevier.com/__data/assets/pdf_file/0010/97066/ReviewerForm.pdf}), and the papers it accepts are software paper, not research (science) output papers.  Maybe we need some different examples.}
-The rOpenSci community represents one exception to this, with a documented review process~\cite{rOpenSci-reviews} they use to determine whether a package can become part of the rOpenSci collection.
-
-\katznote{potential alt paragraph}
-Finally, on the topic of peer review of software, there is a distinct lack of standardization around the practices of peer review.
-Some journals that accept both ``software'' submissions and general research papers can conflate review of the submitted software with a review of research output \textbf{produced by} the software. Software-only journals (e.g., \textit{Journal of Open Research Software}, \textit{SoftwareX}), and the
-rOpenSci community represent exceptions to this, with documented review processes. For example, rOpenSci has a process \cite{rOpenSci-reviews} used to determine whether a package can become part of the rOpenSci collection.
-
+Some journals that accept both ``software'' submissions and general research papers can conflate review of the submitted software with a review of research output \textbf{produced by} the software.
+Software-only journals (e.g., \textit{Journal of Open Research Software}, \textit{SoftwareX}) and the rOpenSci community represent exceptions to this, with documented review processes.
+For example, rOpenSci has a process \cite{rOpenSci-reviews} used to determine whether a package can become part of the rOpenSci collection.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Challenges and Research Directions}
