minor edits to discussion of workshops

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -190,9 +190,8 @@ Currently, services including Zenodo and fig\textbf{share} allow software develo
 The CodeMeta project~\cite{CodeMeta} is formalizing minimal metadata schemas in JSON and XML to connect existing software repositories, archives, and libraries (e.g., GitHub, fig\textbf{share}, Zenodo).
 
 In recognition of the general desire to improve software citation rates, funders and agencies in the US (NFS, NIH, private foundations) and the UK (STFC, JISC, Wellcome Trust) have sponsored or hosted a number of workshops specifically aimed at discussing issues around software citation~\cite{Sufi:2014en,Ahalt:2015ve,ssisoftwarecredit,aas-software-index,saga,Allen:2015ub}.
-In many cases these workshops have produced strong recommendations for their respective communities on how to best proceed.
-
-In addition, a number of common themes arose in these workshops, including 1) The critical need for making software more ``citable'' (and therefore actions authors and publishers should take to improve the status quo) 2) How to better measure the impact of software (and therefore attract appropriate funding) and 3) How to properly archive software (where, how and how often) and how this affects what to cite and when.
+In many cases these workshops produced strong recommendations for their respective communities on how to best proceed.
+In addition, a number of common themes arose in these workshops, including (1) the critical need for making software more ``citable'' (and therefore actions authors and publishers should take to improve the status quo), (2) how to better measure the impact of software (and therefore attract appropriate funding), and (3) how to properly archive software (where, how, and how often) and how this affects what to cite and when.
 
 Complementary efforts to provide credit for software development in research also depend on standardized citation practices.
 In an effort to ease the process of citing software, Wilson suggests that software authors include a \texttt{CITATION} file to document exactly how the authors of the software would like to be cited by others~\citeyear{ssi-citation-files}, 
