word in table header should be lowercase

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -220,7 +220,7 @@ Table~\ref{tab:challenges} summarizes key challenges and research directions for
 \tbl{Key research challenges and possible solutions\slash methods\label{tab:challenges}}{%
 \begin{tabular}{@{}p{0.38\linewidth}p{0.58\linewidth}@{}}
 \toprule
-\textbf{Key research Challenge} & \textbf{Possible solutions/methods} \\
+\textbf{Key research challenge} & \textbf{Possible solutions/methods} \\
 \midrule
 
 Identify necessary metadata associated with software for citation &
