updated CodeMeta team... apparently I am on the list now

--- a/SC-challenge.bib
+++ b/SC-challenge.bib
@@ -553,11 +553,11 @@
 	Year = {2016}}
 
 @misc{CodeMeta,
-	Author = {Carl Boettiger and Matt Jones and Arfon M Smith and Yolanda Gil and Martin Fenner and Lars Holm Nielsen and Mark Hahnel},
+	Author = {Carl Boettiger and Matt Jones and Arfon M Smith and Yolanda Gil and Martin Fenner and Lars Holm Nielsen and Mark Hahnel and Abby Mayes and Kyle Niemeyer and Jennifer Lin and Alice Allen and Mercè Crosas and Ashley Sands and Neil Chue Hong},
 	Date-Added = {2016-01-12 08:53:31 +0000},
 	Date-Modified = {2016-01-13 07:19:34 +0000},
 	Howpublished = {\url{http://codemeta.github.io/}},
-	Note = {Accessed: 2016-01-12},
+	Note = {Accessed: 2016-04-10},
 	Title = {{CodeMeta}},
 	Year = {2016}}
 
