--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -186,8 +186,8 @@ As a first step towards sustainable, reusable, and attributable software, effort
 
 Multiple organizations, including the WSSSPE Software Credit working group~[\citeNP{WSSSPE1};\citeyearNP{WSSSPE2};\citeyearNP{WSSSPE3}] and FORCE11 Software Citation Working Group~\citeyear{SCWG}, are working to standardize software citation practices.
 Some of the observations and recommendations made here come from their efforts, which follow similar work by DataCite and the~\citeN{DataCitation2014} to standardize research data citation practices.
-Currently, services including Zenodo and fig\textbf{share} allow software developers to deposit, archive, and obtain a DOI for a version of their software; the former has a streamlined process~\cite{GitHubZenodo} to register DOIs for GitHub software releases.
-The CodeMeta project~\cite{CodeMeta} is formalizing minimal metadata schemas in JSON and XML to connect existing software repositories, archives, and libraries (e.g., GitHub, fig\textbf{share}, Zenodo).
+Currently, services including Zenodo and figshare allow software developers to deposit, archive, and obtain a DOI for a version of their software; the former has a streamlined process~\cite{GitHubZenodo} to register DOIs for GitHub software releases.
+The CodeMeta project~\cite{CodeMeta} is formalizing minimal metadata schemas in JSON and XML to connect existing software repositories, archives, and libraries (e.g., GitHub, figshare, Zenodo).
 
 In recognition of the general desire to improve software citation rates, funders and agencies in the US (NFS, NIH, private foundations) and the UK (STFC, JISC, Wellcome Trust) have sponsored or hosted a number of workshops specifically aimed at discussing issues around software citation~\cite{Sufi:2014en,Ahalt:2015ve,ssisoftwarecredit,aas-software-index,saga,Allen:2015ub}.
 In many cases these workshops produced strong recommendations for their respective communities on how best to proceed.
