small change to spacing

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -33,7 +33,6 @@
 \newcommand{\knnote}[1]{ {\textcolor{orange} { ***KEN: #1 }}} % Kyle
 \newcommand{\asnote}[1]{ {\textcolor{red} { ***AMS: #1 }}} %Arfon
 
-
 % Package to generate and customize Algorithm as per ACM style
 \usepackage[ruled]{algorithm2e}
 \renewcommand{\algorithmcfname}{ALGORITHM}
@@ -196,7 +195,7 @@ In addition, a number of common themes arose in these workshops, including (1) t
 Complementary efforts to provide credit for software development in research also depend on standardized citation practices.
 In an effort to ease the process of citing software, Wilson suggests that software authors include a \texttt{CITATION} file to document exactly how the authors of the software would like to be cited by others~\citeyear{ssi-citation-files}, 
 though this is not a machine-readable solution.
-Another proposal is transitive credit via JSON-LD~\cite{Katz:2015aa}, which assigns varying credit weights to contriponents---both contributors and research artifacts, including software and data---depending on their level of importance to the work.
+Another proposal is transitive credit via \mbox{JSON-LD}~\cite{Katz:2015aa}, which assigns varying credit weights to contriponents---both contributors and research artifacts, including software and data---depending on their level of importance to the work.
 Project CRediT (contributor role taxonomy)~\cite{project_credit} includes a ``software'' category for authors of a publication with roles dedicated to software development, maintenance, and\slash or testing.
 The related PaperBadger project~\cite{PaperBadger} creates digital contributor badges associated with each Project CRediT role, connecting publications with people via DOI and ORCID, respectively.
 
