--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -251,28 +251,9 @@ Existing services such as Libraries.io~\cite{Libraries.io} and Depsy~\cite{Depsy
 Technical solutions to these challenges exist---community acceptance is instead needed.
 
 In arguing the need for software citation, we simultaneously introduce the question of \textbf{when} software should be cited.
-Although there is no clear answer to this question, we argue that ensuring reproducibility of research results requires citation of software if used directly and important to research results.
+Although there is no clear answer to this question, ensuring reproducibility of research results requires citation of software if used directly and important to research results.
 In other words, if using different software could produce different data or results, then the software used should be cited.
-We are currently leading the FORCE11 Software Citation Working Group to develop principles for software citation~\citeyear{SCWG}.
-The draft principles document~\cite{SoftwareCitation2016}, which is adapted from an earlier set of principles for data citation~\cite{DataCitation2014}, discusses how to decide what software to cite:
-\begin{quote}
-What software should be cited is the decision of the author(s) of the research work in the context of community norms and practices, and in most research communities, these are currently in flux.
-In general, we believe that software should be cited on the same basis as any other research product such as a paper or book; that is, authors should cite the appropriate set of software products just as they cite the appropriate set of papers.
-Again, the specific decision of what is appropriate must be made by the author(s) of the product.
-However, an illustrative example is the use of Microsoft Excel in research.
-We suggest that if Excel is used to simply store and plot data, it does not need to be cited, but if it is used for statistical analysis, it should be.  Similarly, general software for conducting library research (e.g., JSTOR Mobile App), writing research papers (e.g., \LaTeX), research presentations (e.g., Powerpoint) or communications (e.g., Skype) should not be cited.
-This recommendation matches that of the Purdue Online Writing Lab: ``Do not cite standard office software (e.g. Word, Excel) or programming languages.  Provide references only for specialized software''~\cite{powl-citing-software}.
-In other words, if using different software could produce different data or results, then the software used should be cited.
-%
-%Note that some software which is or could be captured as part of data provenance may not be cited.
-%Citation is a record of software that is important to the research outcome, where provenance is a record of all steps (including software) used to generated particular data within the research process.
-%This implies that for a data research product, provenance data will include all cited software, but not necessarily vice versa.
-%Similarly, the software metadata that is recorded as part of data provenance should be a superset of the metadata recorded as part of software citation.
-%And the data recorded for reproducibility should also be a superset of the metadata recorded as part of software citation.
-%These statements may also be true for software products.
-%In general, we intend the software citation principles to cover the minimum of what is necessary for software citation for the purpose of software identification.
-%Other use cases (e.g., provenance, reproducibility) may lead to additional requirements (i.e., enhanced metadata).
-\end{quote}
+We led the FORCE11 Software Citation Working Group to develop principles for software citation~\cite{SoftwareCitation2016}, which are adapted from an earlier set of principles for data citation~\cite{DataCitation2014}; that document discusses further how to decide what software to cite.
 
 However, research and development efforts are needed to solve the remaining challenges.
 These questions include: how can we cite closed-source\slash commercial software---can the above information be provided, even if the software itself is not publicly preserved?
