shortened 2nd research challenge solution

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -213,7 +213,6 @@ For example, rOpenSci has a process \cite{rOpenSci-reviews} used to determine wh
 %%%%%%%%%%%%%%%%%%%%%%%%%
 
 Table~\ref{tab:challenges} summarizes key challenges and research directions for software citation, along with possible solutions\slash methods.
-
 \rowcolors{2}{}{lightgray}
 \begin{table}[htbp]%
 \tbl{Key research challenges and possible solutions\slash methods\label{tab:challenges}}{%
@@ -226,7 +225,7 @@ Identify necessary metadata associated with software for citation &
 We suggest metadata below, and the CodeMeta project~\cite{CodeMeta} is working to determine minimal metadata \\
 
 Standardize proper formats for citing software in publications &
-The FORCE11 Software Citation Working Group is currently working to define and gain community acceptance for software citation principles, after which (starting in July 2016) a follow-on group will initiate implementation activities. Part of the charge for this group will be to work with publishers on this challenge \\
+The FORCE11 Software Citation Working Group is currently working to define and gain community acceptance for software citation principles, after which (starting in July 2016) a follow-on group will initiate implementation activities. \\
 
 Establish mechanisms for software to cite other software (i.e., dependencies) &
 Software publication as software papers allows this. For software that is directly published, this is an open challenge with no obvious path forward \\
