shortening authors in bib

--- a/SC-challenge.bib
+++ b/SC-challenge.bib
@@ -13,7 +13,7 @@
 
 @string{amermathmonthly = {Amer. Math. Monthly}}
 
-@string{amersocio = {American Journal of Sociology}}
+@string{amersocio = {Amer. J. Sociology}}
 
 @string{amerstatassoc = {J. Amer. Statist. Assoc.}}
 
@@ -217,7 +217,8 @@
 	Year = {2013}}
 
 @techreport{Ahalt:2015ve,
-	Author = {Ahalt, Stan and Carsey, Tom and Couch, Alva and Hooper, Rick and Ibanez, Luis and Idaszak, Ray and Jones, Matthew B and Lin, Jennifer and Robinson, Erin},
+	OLDAuthor = {Ahalt, Stan and Carsey, Tom and Couch, Alva and Hooper, Rick and Ibanez, Luis and Idaszak, Ray and Jones, Matthew B and Lin, Jennifer and Robinson, Erin},
+	Author = {Ahalt, Stan and Carsey, Tom and others},
 	Date-Added = {2016-03-24 03:16:20 +0000},
 	Date-Modified = {2016-03-24 03:16:20 +0000},
 	Institution = {National Science Foundation},
@@ -229,7 +230,8 @@
 }
 
 @article{Allen:2015ub,
-	Author = {Allen, Alice and Berriman, G Bruce and DuPrie, Kimberly and Mink, Jessica and Nemiroff, Robert and Robitaille, Thomas and Shamir, Lior and Shortridge, Keith and Taylor, Mark and Teuben, Peter and Wallin, John},
+	OLDAuthor = {Allen, Alice and Berriman, G. Bruce and DuPrie, Kimberly and Mink, Jessica and Nemiroff, Robert and Robitaille, Thomas and Shamir, Lior and Shortridge, Keith and Taylor, Mark and Teuben, Peter and Wallin, John},
+	Author = {Allen, Alice and Berriman, G. Bruce and others},
 	Date-Added = {2016-03-24 03:16:20 +0000},
 	Date-Modified = {2016-03-24 03:16:20 +0000},
 	Eprint = {http://arxiv.org/abs/1512.07919v1},
@@ -254,8 +256,9 @@
 
 @inproceedings{Hannay:2009wp,
 	Address = {Vancouver, BC},
-	Author = {Hannay, Jo Erskine and Langtangen, Hans Petter and MacLeod, Carolyn and Pfahl, Dietmar and Singer, Janice and Wilson, Greg},
-	Booktitle = {Proceedings of the 2009 ICSE Workshop on Software Engineering for Computational Science and Engineering},
+	OLDAuthor = {Hannay, Jo Erskine and Langtangen, Hans Petter and MacLeod, Carolyn and Pfahl, Dietmar and Singer, Janice and Wilson, Greg},
+	Author = {Hannay, Jo Erskine and Langtangen, Hans Petter and others},
+	Booktitle = {Proc. 2009 ICSE Workshop on Soft. Eng. for Computational Sci. and Eng.},
 	Date-Added = {2016-03-24 03:16:20 +0000},
 	Date-Modified = {2016-03-24 03:25:31 +0000},
 	Publisher = {IEEE},
@@ -307,8 +310,9 @@
 
 @inproceedings{Sufi:2014en,
 	Address = {Edinburgh, United Kingdom},
-	Author = {Sufi, Shoaib and Chue Hong, Neil P and Hettrick, Simon and Antonioletti, Mario and Crouch, Stephen and Hay, Alexander and Inupakutika, Devasena and Jackson, Mike and Pawlik, Aleksandra and Peru, Giacomo and Robinson, John and Les Carr and De Roure, David and Goble, Carole and Parsons, Mark},
-	Booktitle = {Proceedings of the 1st ACM SIGPLAN Workshop on Reproducible Research Methodologies and New Publication Models in Computer Engineering},
+	OLDAuthor = {Sufi, Shoaib and Chue Hong, Neil P and Hettrick, Simon and Antonioletti, Mario and Crouch, Stephen and Hay, Alexander and Inupakutika, Devasena and Jackson, Mike and Pawlik, Aleksandra and Peru, Giacomo and Robinson, John and Les Carr and De Roure, David and Goble, Carole and Parsons, Mark},
+	Author = {Sufi, Shoaib and Chue Hong, Neil P and others},
+	Booktitle = {Proc. 1st ACM SIGPLAN Work. on Reproducible Research Methodologies and New Publication Models in Comp. Eng.},
     location = {Edinburgh, United Kingdom},
 	Date-Added = {2016-03-24 03:16:20 +0000},
 	Date-Modified = {2016-03-24 03:16:20 +0000},
@@ -348,7 +352,8 @@
 
 @article{Wilson:2014aa,
 	Abstract = {<sec><title/><p>We describe a set of best practices for scientific software development, based on research and experience, that will improve scientists' productivity and the reliability of their software.</p></sec>},
-	Author = {Wilson, Greg AND Aruliah, D. A. AND Brown, C. Titus AND Chue Hong, Neil P. AND Davis, Matt AND Guy, Richard T. AND Haddock, Steven H. D. AND Huff, Kathryn D. AND Mitchell, Ian M. AND Plumbley, Mark D. AND Waugh, Ben AND White, Ethan P. AND Wilson, Paul},
+	OLDAuthor = {Wilson, Greg AND Aruliah, D. A. AND Brown, C. Titus AND Chue Hong, Neil P. AND Davis, Matt AND Guy, Richard T. AND Haddock, Steven H. D. AND Huff, Kathryn D. AND Mitchell, Ian M. AND Plumbley, Mark D. AND Waugh, Ben AND White, Ethan P. AND Wilson, Paul},
+	Author = {Wilson, Greg AND Aruliah, D. A. AND others},
 	Date-Added = {2016-03-23 01:48:30 +0000},
 	Date-Modified = {2016-03-23 01:48:30 +0000},
 	Doi = {10.1371/journal.pbio.1001745},
@@ -553,7 +558,8 @@
 	Year = {2016}}
 
 @misc{CodeMeta,
-	Author = {Carl Boettiger and Matt Jones and Arfon M Smith and Yolanda Gil and Martin Fenner and Lars Holm Nielsen and Mark Hahnel and Abby Mayes and Kyle Niemeyer and Jennifer Lin and Alice Allen and Mercè Crosas and Ashley Sands and Neil Chue Hong},
+	OLDAuthor = {Carl Boettiger and Matt Jones and Arfon M Smith and Yolanda Gil and Martin Fenner and Lars Holm Nielsen and Mark Hahnel and Abby Mayes and Kyle Niemeyer and Jennifer Lin and Alice Allen and Merc\`{e} Crosas and Ashley Sands and Neil Chue Hong},
+	Author = {Carl Boettiger and Matt Jones and others},
 	Date-Added = {2016-01-12 08:53:31 +0000},
 	Date-Modified = {2016-01-13 07:19:34 +0000},
 	Howpublished = {\url{http://codemeta.github.io/}},
@@ -570,10 +576,11 @@
 	Year = {2014}}
 
 @article{WSSSPE2,
-	Author = {Daniel S. Katz and Sou-Cheng T. Choi and Nancy Wilkins-Diehr and Neil {Chue Hong} and Colin C. Venters and James Howison and Frank J. Seinstra and Matthew Jones and Karen Cranston and Thomas L. Clune and Miguel de Val{-}Borro and Richard Littauer},
+	OLDAuthor = {Daniel S. Katz and Sou-Cheng T. Choi and Nancy Wilkins-Diehr and Neil {Chue Hong} and Colin C. Venters and James Howison and Frank J. Seinstra and Matthew Jones and Karen Cranston and Thomas L. Clune and Miguel de Val{-}Borro and Richard Littauer},
+	Author = {Daniel S. Katz and Sou-Cheng T. Choi and others},
 	Date-Added = {2016-01-12 08:45:29 +0000},
 	Date-Modified = {2016-03-23 18:02:18 +0000},
-	Journal = {Journal of Open Research Software},
+	Journal = {J. Open Research Software},
 	Number = {1},
 	Pages = {e7},
 	Title = {Report on the Second Workshop on Sustainable Software for Science: Practice and Experiences {(WSSSPE2)}},
@@ -586,7 +593,7 @@
 	Author = {Robert R Downs and W. Christopher Lenhardt and Erin Robinson and Ethan Davis and Nicholas Weber},
 	Date-Added = {2016-01-11 23:52:08 +0000},
 	Date-Modified = {2016-01-12 08:44:20 +0000},
-	Journal = {Journal of Open Research Software},
+	Journal = {J. Open Research Software},
 	Pages = {e11},
 	Title = {Community Recommendations for Sustainable Scientific Software},
 	Volume = {3},
@@ -598,7 +605,7 @@
 	Date-Added = {2016-01-11 23:48:00 +0000},
 	Date-Modified = {2016-01-13 07:35:26 +0000},
 	Doi = {10.1002/asi.23538},
-	Journal = {Journal of the Association for Information Science and Technology},
+	Journal = {J. Assoc. for Information Science and Technology},
 	Note = {In press},
 	Title = {Software in the scientific literature: {Problems} with seeing, finding, and using software mentioned in the biology literature},
 	Year = {2015}}
@@ -623,12 +630,13 @@
     Doi = {10.6084/m9.figshare.785731.v1}}
 
 @article{WSSSPE1,
-	Author = {Daniel S. Katz and Sou-Cheng T. Choi and Hilmar Lapp and Ketan Maheshwari and Frank L\"{o}ffler and Matthew Turk and Marcus Hanwell and Nancy Wilkins-Diehr and James Hetherington and James Howison and Shel Swenson and Gabrielle Allen and Anne Elster and Bruce Berriman and Colin Venters},
+	OLDAuthor = {Daniel S. Katz and Sou-Cheng T. Choi and Hilmar Lapp and Ketan Maheshwari and Frank L\"{o}ffler and Matthew Turk and Marcus Hanwell and Nancy Wilkins-Diehr and James Hetherington and James Howison and Shel Swenson and Gabrielle Allen and Anne Elster and Bruce Berriman and Colin Venters},
+	Author = {Daniel S. Katz and Sou-Cheng T. Choi and others},
 	Date-Added = {2016-01-11 21:38:36 +0000},
 	Date-Modified = {2016-01-12 08:44:20 +0000},
 	Doi = {10.5334/jors.an},
 	Issn = {2049-9647},
-	Journal = {Journal of Open Research Software},
+	Journal = {J. Open Research Software},
 	Keywords = {sustainability; software development; policy; career paths},
 	Number = {1},
 	Pages = {e6},
@@ -637,10 +645,11 @@
 	Year = {2014}}
 
 @article{WSSSPE3,
-	Author = {Daniel S. Katz and Sou-Cheng T. Choi and Kyle E. Niemeyer and James Hetherington and Frank L\"{o}ffler and Dan Gunter and Ray Idaszak and Steven R. Brandt and Mark A. Miller and Sandra Gesing and Nick D. Jones and Nicholas Weber and Gabrielle Allen and Colin C. Venters and Ethan Davis and Lorraine Hwang and Ilian Todorov and Abani Patra and Miguel de Val{-}Borro},
+	OLDAuthor = {Daniel S. Katz and Sou-Cheng T. Choi and Kyle E. Niemeyer and James Hetherington and Frank L\"{o}ffler and Dan Gunter and Ray Idaszak and Steven R. Brandt and Mark A. Miller and Sandra Gesing and Nick D. Jones and Nicholas Weber and Gabrielle Allen and Colin C. Venters and Ethan Davis and Lorraine Hwang and Ilian Todorov and Abani Patra and Miguel de Val{-}Borro},
+	Author = {Daniel S. Katz and Sou-Cheng T. Choi and others},
 	Date-Added = {2016-01-11 21:38:20 +0000},
 	Date-Modified = {2016-03-23 01:05:41 +0000},
-	Journal = {Journal of Open Research Software},
+	Journal = {J. Open Research Software},
 	Note = {Submitted. Available at: \url{http://arxiv.org/abs/1602.02296}},
 	Title = {Report on the Third Workshop on Sustainable Software for Science: Practice and Experiences {(WSSSPE3)}},
 	Year = {2016}}
@@ -660,7 +669,7 @@
 	Date-Added = {2016-01-05 07:44:29 +0000},
 	Date-Modified = {2016-03-23 01:09:22 +0000},
 	Doi = {10.5334/jors.by},
-	Journal = {Journal of Open Research Software},
+	Journal = {J. Open Research Software},
 	Number = {1},
 	Pages = {e7},
 	Title = {{Transitive Credit} and {JSON-LD}},
@@ -728,12 +737,12 @@
  year={2015},
  month={Summer},
  doi={10.3998/3336451.0018.308},
- journal={The Journal of Electronic Publishing},
+ journal={J. Electronic Publishing},
 }
 
 @article{Pan2015,
 title = {Assessing the impact of software on science: A bootstrapped learning of software entities in full-text papers},
-journal = {Journal of Informetrics},
+journal = {J. Informetrics},
 volume = {9},
 number = {4},
 pages = {860--871},
@@ -786,7 +795,8 @@ author = {Xuelian Pan and Erjia Yan and Qianqian Wang and Weina Hua},
 	Year = {2014}}
 
 @misc{rOpenSci-reviews,
-    Author = {Noam Ross and Carl Boettiger and Jenny Bryan and Scott Chamberlain and Rich FitzJohn and Karthik Ram},
+    OLDAuthor = {Noam Ross and Carl Boettiger and Jenny Bryan and Scott Chamberlain and Rich FitzJohn and Karthik Ram},
+    Author = {Noam Ross and Carl Boettiger and others},
     Howpublished = {\url{http://ropensci.org/blog/2016/03/28/software-review}},
     Year = {2016},
     Note = {Accessed: 2016-04-06},
@@ -794,7 +804,8 @@ author = {Xuelian Pan and Erjia Yan and Qianqian Wang and Weina Hua},
     }
 
 @misc{nasaads,
-	Author = {Alberto Accomazzi and Michael J Kurtz and Carolyn Stern Grant and Edwin Henneken and Donna Thompson and Roman Chyla and Alex Holachek and Jonathan Elliott},
+	OLDAuthor = {Alberto Accomazzi and Michael J Kurtz and Carolyn Stern Grant and Edwin Henneken and Donna Thompson and Roman Chyla and Alex Holachek and Jonathan Elliott},
+	Author = {Alberto Accomazzi and Michael J Kurtz and others},
 	Howpublished = {\url{http://adswww.harvard.edu/}},
 	Note = {Accessed: 2016-04-07},
 	Title = {The {SAO}/{NASA} {Astrophysics Data System}},
