--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -147,7 +147,7 @@ Author's addresses: K.\ E.\ Niemeyer, School of Mechanical, Industrial, and Manu
 A.\ M.\ Smith,
 GitHub, Inc.;
 D.\ S.\ Katz,
-National Center for Supercomputing Applications \& Graduate School of Library and Information Science, University of Illinois at Urbana--Champaign;
+NCSA \& iSchool \& ECE, University of Illinois at Urbana--Champaign;
 emails: \href{mailto:kyle.niemeyer@oregonstate.edu}{kyle.niemeyer@oregonstate.edu}, \href{mailto:arfon@github.com}{arfon@github.com}, \href{mailto:d.katz@ieee.org}{d.katz@ieee.org}
 \end{bottomstuff}
 
@@ -229,9 +229,10 @@ Standardize proper formats for citing software in publications &
 The FORCE11 Software Citation Working Group is currently working to define and gain community acceptance for software citation principles, after which (starting in July 2016) a follow-on group will initiate implementation activities. Part of the charge for this group will be to work with publishers on this challenge \\
 
 Establish mechanisms for software to cite other software (i.e., dependencies) &
-Software publication as software papers allows this. For software that is directly published, this is an open challenge with no obvious path forward \\
+Software publication as software papers allows this. For software that is directly published, this is an open challenge\\ % with no obvious path forward \\
 
-Develop infrastructure to support indexing of software citations along with (or complementary to) the existing publication citation ecosystem &
+Develop infrastructure to support indexing of software citations %along with (or complementary to)
+within the existing publication citation ecosystem &
 The FORCE11 Software Citation Implementation Working Group will also work on this, in collaboration with publishers and indexers \\
 
 Determine standard practices for peer review of software &
@@ -268,6 +269,8 @@ Should citable software itself follow the arXiv preprint model where releases ar
 The authors wish to thank the members of the SciSIP community and mailing list, in particular Chris Belter, James Howison, and Joshua Rosenbloom, for a useful discussion on incentives for software publications and how their impact has been and could further be measured.
 In addition, the authors acknowledge members of the FORCE11 Software Citation Working Group, whose views contributed to this document.
 \end{acks}
+
+\vspace{-2mm}
 
 % Bibliography
 \bibliographystyle{ACM-Reference-Format-Journals}
