fixed WSSSPE3 report reference

--- a/SC-challenge.bib
+++ b/SC-challenge.bib
@@ -649,8 +649,7 @@
 	Author = {Daniel S. Katz and Sou-Cheng T. Choi and others},
 	Date-Added = {2016-01-11 21:38:20 +0000},
 	Date-Modified = {2016-03-23 01:05:41 +0000},
-	Journal = {J. Open Research Software},
-	Note = {Submitted. Available at: \url{http://arxiv.org/abs/1602.02296}},
+	Note = {Under review. {\tt \href{http://arxiv.org/abs/1602.02296}{arXiv:1602.02296} [cs.SE]}},
 	Title = {Report on the Third Workshop on Sustainable Software for Science: Practice and Experiences {(WSSSPE3)}},
 	Year = {2016}}
 
