adding periods in the table actions

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -222,23 +222,23 @@ Table~\ref{tab:challenges} summarizes key challenges and research directions for
 \midrule
 
 Identify necessary metadata associated with software for citation &
-We suggest metadata below, and the CodeMeta project~\cite{CodeMeta} is working to determine minimal metadata \\
+We suggest metadata below, and the CodeMeta project~\cite{CodeMeta} is working to determine minimal metadata. \\
 
 Standardize proper formats for citing software in publications &
 The FORCE11 Software Citation Working Group is currently working to define and gain community acceptance for software citation principles, after which (starting in July 2016) a follow-on group will initiate implementation activities. \\
 
 Establish mechanisms for software to cite other software (i.e., dependencies) &
-Software publication as software papers allows this. For software that is directly published, this is an open challenge\\ % with no obvious path forward \\
+Software publication as software papers allows this. For software that is directly published, this is an open challenge.\\ % with no obvious path forward \\
 
 Develop infrastructure to support indexing of software citations %along with (or complementary to)
 within the existing publication citation ecosystem &
-The FORCE11 Software Citation Implementation Working Group will also work on this, in collaboration with publishers and indexers \\
+The FORCE11 Software Citation Implementation Working Group will also work on this, in collaboration with publishers and indexers. \\
 
 Determine standard practices for peer review of software &
-Professional societies and science communities need to determine how this will happen \\
+Professional societies and science communities need to determine how this will happen. \\
 
 Increase cultural acceptance of the concept of software as a digital product &
-Acceptance will happen over time; unclear how to accelerate this process \\
+Acceptance will happen over time; unclear how to accelerate this process. \\
 \bottomrule
 \end{tabular}}
 \end{table}
