updated funding ack slightly

--- a/SC-challenge.tex
+++ b/SC-challenge.tex
@@ -141,8 +141,7 @@ DANIEL S. KATZ
 
 \begin{bottomstuff}
 Work by K.\ E.\ Niemeyer was supported in part by the National Science Foundation (NSF) under grant ACI-1535065.
-Work by D.\ S.\ Katz was supported by the NSF while working at the Foundation; any opinion, finding, and conclusions or recommendations expressed in this material are those of the author and do not necessarily reflect the views of the NSF. Some work by Katz was also done at the Computation Institute, University of Chicago \& Argonne National Laboratory.
-
+Work by D.\ S.~Katz was supported by the NSF while working at the Foundation; any opinion, finding, and conclusions or recommendations expressed in this material are those of the author and do not necessarily reflect the views of the NSF.
 Author's addresses: K.\ E.\ Niemeyer, School of Mechanical, Industrial, and Manufacturing Engineering, Oregon State University;
 A.\ M.\ Smith,
 GitHub, Inc.;
